# isaac_ros_cumotion

./: .gitattributes  .gitignore  README.md
isaac_ros_cumotion/: CMakeLists.txt  package.xml
isaac_ros_cumotion/include/isaac_ros_cumotion/: cumotion_planner.hpp  static_planning_scene.hpp
isaac_ros_cumotion/include/isaac_ros_cumotion/impl/: cumotion_logger_bridge.hpp  ik_solver_impl.hpp  robot_manager_impl.hpp  trajectory_optimizer_impl.hpp  utils.hpp  world_manager_impl.hpp
isaac_ros_cumotion/launch/: isaac_ros_cumotion.launch.py
isaac_ros_cumotion/params/: isaac_ros_cumotion_params.yaml
isaac_ros_cumotion/src/: cumotion_planner.cpp  static_planning_scene.cpp
isaac_ros_cumotion/src/impl/: cumotion_logger_bridge.cpp  ik_solver_impl.cpp  robot_manager_impl.cpp  trajectory_optimizer_impl.cpp  utils.cpp  world_manager_impl.cpp
isaac_ros_cumotion/test/: test_cumotion_logger_bridge.cpp  test_cumotion_logger_bridge.hpp  test_moveit_scene_file_parser.cpp  test_robot_manager_impl.cpp  test_robot_manager_impl.hpp  test_trajectory_optimizer_impl.cpp  test_trajectory_optimizer_impl.hpp  test_utils_compose_pose.cpp  test_utils_compose_pose.hpp  test_world_manager_impl.cpp
isaac_ros_cumotion_controllers/: CMakeLists.txt  isaac_ros_cumotion_controllers.xml  package.xml
isaac_ros_cumotion_controllers/include/isaac_ros_cumotion_controllers/: bimanual_ik_controller.hpp
isaac_ros_cumotion_controllers/scripts/: ik_controller_marker_node.py
isaac_ros_cumotion_controllers/src/: bimanual_ik_controller.cpp
isaac_ros_cumotion_examples/: package.xml
isaac_ros_cumotion_interfaces/: CMakeLists.txt  package.xml
isaac_ros_cumotion_interfaces/action/: AttachObject.action  MotionPlan.action
isaac_ros_cumotion_interfaces/srv/: GetRobotDescription.srv  SetRobotDescription.srv
isaac_ros_cumotion_moveit/: package.xml
isaac_ros_cumotion_moveit/include/isaac_ros_cumotion_moveit/: cumotion_interface.hpp  cumotion_move_group_client.hpp  cumotion_planner_manager.hpp  cumotion_planning_context.hpp
isaac_ros_cumotion_moveit/src/: cumotion_move_group_client.cpp
isaac_ros_cumotion_object_attachment/: CMakeLists.txt  package.xml
isaac_ros_cumotion_object_attachment/include/isaac_ros_cumotion_object_attachment/: object_attachment.hpp
isaac_ros_cumotion_object_attachment/launch/: cumotion_bringup.launch.py  object_attachment.launch.py
isaac_ros_cumotion_object_attachment/params/: object_attachment_params.yaml
isaac_ros_cumotion_object_attachment/src/: object_attachment.cpp
isaac_ros_cumotion_object_attachment/test/: isaac_ros_object_attachment_esdf_test.py  isaac_ros_object_attachment_pol_test.py  object_attachment_test_base.py  test_cuboid_geometry.cpp
isaac_ros_cumotion_robot_description/: package.xml
isaac_ros_cumotion_robot_description/urdf/: flexiv_rizon4s_grav.urdf  ur5e_robotiq_2f_85.urdf
isaac_ros_cumotion_robot_description/xrdf/: flexiv_rizon4s_grav.xrdf  franka.xrdf  ur10e.xrdf  ur10e_robotiq_2f_140.xrdf  ur10e_robotiq_2f_85.xrdf  ur5e.xrdf  ur5e_robotiq_2f_140.xrdf  ur5e_robotiq_2f_85.xrdf
isaac_ros_cumotion_robot_segmenter/: CMakeLists.txt  package.xml
isaac_ros_cumotion_robot_segmenter/include/isaac_ros_cumotion_robot_segmenter/: robot_segmenter.hpp
isaac_ros_cumotion_robot_segmenter/launch/: robot_segmenter.launch.py
isaac_ros_cumotion_robot_segmenter/params/: robot_segmentation_params.yaml
isaac_ros_cumotion_robot_segmenter/src/: robot_segmenter.cpp
isaac_ros_cumotion_robot_segmenter/test/: .gitignore  test_robot_segmenter_float16.py  test_robot_segmenter_pol.py  test_robot_segmenter_reload.py  test_robot_segmenter_uint16.py
isaac_ros_cumotion_robot_segmenter/test/test_data/: camera_pose.json  depth_camera_info.json  golden_robot_segmenter_depth_float16.npy  golden_robot_segmenter_depth_uint16.npy  golden_robot_segmenter_mask_float16.npy  golden_robot_segmenter_mask_uint16.npy  input_depth_image.npy  robot.xrdf  robot_mask_from_curobo.npy
